force-app/main/default/objects/Reservation__c/Reservation__c.object-meta.xml
<CustomObject>
    <label>Reservation</label>
    <pluralLabel>Reservations</pluralLabel>
    <nameField><label>Reservation Id</label><type>AutoNumber</type><displayFormat>RSV-SYN-{000000}</displayFormat></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>