force-app/main/default/objects/Reservation__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Text</type><length>255</length>
</CustomField>