force-app/main/default/objects/Reservation__c/fields/Customer_Count__c.field-meta.xml
<CustomField>
    <fullName>Customer_Count__c</fullName>
    <label>Customer Count</label>
    <type>Number</type><precision>3</precision><scale>0</scale><required>true</required>
</CustomField>