force-app/main/default/objects/Reservation__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Text</type><length>11</length><required>true</required>
</CustomField>