force-app/main/default/objects/Reservation__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <type>Picklist</type><valueSet><valueSetDefinition><value><fullName>STANDARD_ROOM</fullName></value><value><fullName>SUITE</fullName></value><value><fullName>CONFERENCE_ROOM</fullName></value></valueSetDefinition></valueSet>
</CustomField>