force-app/main/default/objects/Reservation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type><required>true</required>
</CustomField>