force-app/main/default/objects/Reservation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type><valueSet><valueSetDefinition><value><fullName>PENDING</fullName></value><value><fullName>CONFIRMED</fullName></value><value><fullName>MODIFIED</fullName></value><value><fullName>CANCELLED</fullName></value></valueSetDefinition></valueSet>
</CustomField>